Fixed alignment issues in landscape mode

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -123,8 +123,8 @@ a:active{
 
 .logo {
     float: left;
-    margin-top: 20px;
-    height: 80px;
+    margin-top: 2vh;
+    height: 10vh;
     width: auto;
     
 }
@@ -184,7 +184,7 @@ header{
 .main-nav{
     float: right;
     list-style: none;
-    margin-top:40px;
+    margin-top:4vh;
 }
 
 .main-nav li{
